Fixed mobile menu z-index over images

--- a/storefront/components/Header/Header.module.css
+++ b/storefront/components/Header/Header.module.css
@@ -74,6 +74,7 @@
   .menu {
     border-top: 1px solid #e2e2e2;
     position: absolute;
+    z-index: 1;
     left: 0;
     right: 0;
     top: 71px;
